--- a/game-of-life/src/index.css
+++ b/game-of-life/src/index.css
@@ -1,4 +1,88 @@
-.gridCell {
-  width: 15px; 
-  height: 15px;
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
+
+html {
+  /* 1rem = 10px */
+  font-size: 62.5%;
+}
+
+.App {
+  background-image: url("./images/hero.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  width: 100%;
+  min-height: 100vh;
+}
+
+body {
+  font-size: 2rem;
+  font-family: 'Share Tech Mono', monospace;
+  margin: 0;
+}
+
+button, select {
+  font-family: 'Share Tech Mono', monospace;
+}
+
+button {
+  border: none;
+  background: #404040;
+  color: #ffffff;
+  font-weight: 100;
+  padding: 15px;
+  margin: 2rem;
+  text-transform: uppercase;
+  border-radius: 6px;
+  display: inline-block;
+}
+
+button:hover {
+  color: #404040;
+  font-weight: 700;
+  padding:12px;
+  border: solid 3px #404040;
+  background: none;
+  box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+}
+
+.grid-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.generation {
+  font-size: 3rem;
+  border: 1px solid black;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 0 15px 0 15px;
+}
+
+.settings{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 0 2rem 2rem 2rem;
+  border-radius: 8px;
+}
+
+.settingsP{
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+h2{
+  padding-top: 4rem;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 2rem;
+  margin: 0;
+}
+@media(min-width: 600px){
+  h2{
+    font-size: 3rem;
+  }
 }
