--- a/game-of-life/src/index.css
+++ b/game-of-life/src/index.css
@@ -31,7 +31,7 @@ button {
   color: #ffffff;
   font-weight: 100;
   padding: 15px;
-  margin: 2rem;
+  margin: 1.5rem;
   text-transform: uppercase;
   border-radius: 6px;
   display: inline-block;
@@ -70,19 +70,42 @@ button:hover {
   border-radius: 8px;
 }
 
-.settingsP{
+.smallHeader{
   font-size: 2.5rem;
   font-weight: bold;
 }
 
 h2{
-  padding-top: 4rem;
+  padding: 4rem 0.5rem 0 0.5rem;
   font-family: 'Press Start 2P', cursive;
   font-size: 2rem;
+  line-height: 3rem;
   margin: 0;
+  margin-bottom: 2rem;
 }
 @media(min-width: 600px){
   h2{
     font-size: 3rem;
   }
+}
+
+.shapesButtons button{
+  padding: 7px;
+  margin: 1rem;
+}
+
+.description{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 0 2rem 2rem 2rem;
+  border-radius: 8px;
+  margin: 2rem 1rem 1rem 1rem;
+  text-align: left;
+}
+
+.description p{
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
